# stickerbot

./: .env.example  .gitignore  CHANGELOG.md  LICENSE  README.md  package-lock.json  package.json  pyproject.toml  server.js  stickerbot.py
public/: app.js  index.html  styles.css
src/: anthropic.js  compose.js  db.js  discover.js  emailFinder.js  orchestrator.js  seed.json  send.js  skills.js  verify.js
